build: change install_dir from /etc/japokwm to /usr/share/japokwm

--- a/config/meson.build
+++ b/config/meson.build
@@ -6,6 +6,7 @@ runtimeFiles = files(
   'tileutils.lua',
   )
 
-install_data(runtimeFiles, install_dir: get_option('datadir') / 'japokwm')
+datadir = get_option('datadir') / 'japokwm'
+install_data(runtimeFiles, install_dir: datadir)
 install_data(configFiles, install_dir: '/etc/japokwm')
-install_subdir('layouts', install_dir: '/etc/japokwm')
+install_subdir('layouts', install_dir: datadir)
