fix: arrange function

--- a/config/meson.build
+++ b/config/meson.build
@@ -4,6 +4,7 @@ configFiles = files(
 runtimeFiles = files(
   'tile.lua',
   'tileutils.lua',
+  'default_values.lua',
   )
 
 datadir = get_option('datadir') / 'japokwm'
