feat: make lua lists more general

--- a/src/meson.build
+++ b/src/meson.build
@@ -68,6 +68,8 @@ srcs = files(
     'lib/lib_container_property.c',
     'lib/local_event_handler.c',
     'lib/local_options.c',
+    'lib/lib_container_list.c',
+    'lib/lib_container_property_list.c',
     'list_sets/container_stack_set.c',
     'list_sets/focus_stack_set.c',
     'list_sets/list_set.c',
