fix: fix segfault if no init.lua exists

--- a/src/meson.build
+++ b/src/meson.build
@@ -27,7 +27,6 @@ srcs = files(
     'keyboard.c',
     'layer_shell.c',
     'layout.c',
-    'layout_set.c',
     'main.c',
     'monitor.c',
     'options.c',
@@ -70,6 +69,8 @@ srcs = files(
     'lib/local_options.c',
     'lib/lib_container_list.c',
     'lib/lib_container_property_list.c',
+    'ring_buffer.c',
+    'lib/lib_ring_buffer.c',
     'list_sets/container_stack_set.c',
     'list_sets/focus_stack_set.c',
     'list_sets/list_set.c',
