feat: add documentation for bitsets

--- a/meson.build
+++ b/meson.build
@@ -58,6 +58,7 @@ if scdoc.found()
         'man/japokwm.5.scd',
         'man/japokwm-actions.5.scd',
         'man/japokwm-opt.5.scd',
+        'man/japokwm-bitset.5.scd',
     ]
     foreach filename : man_files
         topic = filename.split('.')[-3].split('/')[-1]
