--- a/meson.build
+++ b/meson.build
@@ -54,11 +54,12 @@ if scdoc.found()
     sh = find_program('sh', native: true)
     mandir = get_option('mandir')
     man_files = [
+        'man/japokwm-action.5.scd',
+        'man/japokwm-bitset.5.scd',
+        'man/japokwm-color.5.scd',
+        'man/japokwm-opt.5.scd',
         'man/japokwm.1.scd',
         'man/japokwm.5.scd',
-        'man/japokwm-actions.5.scd',
-        'man/japokwm-opt.5.scd',
-        'man/japokwm-bitset.5.scd',
     ]
     foreach filename : man_files
         topic = filename.split('.')[-3].split('/')[-1]
