man: add doc for cursor and cursor_mode

--- a/meson.build
+++ b/meson.build
@@ -58,6 +58,8 @@ if scdoc.found()
         'man/japokwm-bitset.5.scd',
         'man/japokwm-color.5.scd',
         'man/japokwm-container.5.scd',
+        'man/japokwm-cursor.5.scd',
+        'man/japokwm-cursor_mode.5.scd',
         'man/japokwm-opt.5.scd',
         'man/japokwm.1.scd',
         'man/japokwm.5.scd',
