feat: rename action -> Action

--- a/meson.build
+++ b/meson.build
@@ -66,6 +66,8 @@ if scdoc.found()
         'man/japokwm-opt.5.scd',
         'man/japokwm-event_handler.5.scd',
         'man/japokwm-info.5.scd',
+        'man/japokwm-layout.5.scd',
+        'man/japokwm-list.5.scd',
         'man/japokwm.1.scd',
         'man/japokwm.5.scd',
     ]
