doc: add more docs

--- a/meson.build
+++ b/meson.build
@@ -63,12 +63,17 @@ if scdoc.found()
         'man/japokwm-direction.5.scd',
         'man/japokwm-focus_set.5.scd',
         'man/japokwm-geom.5.scd',
-        'man/japokwm-opt.5.scd',
         'man/japokwm-event_handler.5.scd',
         'man/japokwm-info.5.scd',
         'man/japokwm-layout.5.scd',
         'man/japokwm-list.5.scd',
         'man/japokwm-monitor.5.scd',
+        'man/japokwm-options.5.scd',
+        'man/japokwm-output_transform.5.scd',
+        'man/japokwm-root.5.scd',
+        'man/japokwm-server.5.scd',
+        'man/japokwm-tag.5.scd',
+        'man/japokwm-ring_buffer.5.scd',
         'man/japokwm.1.scd',
         'man/japokwm.5.scd',
     ]
