feat: add subsurface support for layer_shell

--- a/src/meson.build
+++ b/src/meson.build
@@ -18,6 +18,7 @@ srcs = files(
     'color.c',
     'command.c',
     'container.c',
+    'subsurface.c',
     'cursor.c',
     'event_handler.c',
     'input_manager.c',
