implement wlr-output-management

--- a/meson.build
+++ b/meson.build
@@ -37,6 +37,9 @@ else
   add_project_arguments('-DDEBUG=0'.format(version), language: 'c')
 endif
 
+#for unstable features
+add_project_arguments('-DWLR_USE_UNSTABLE', language: 'c')
+
 datadir = get_option('datadir')
 install_data(
     'japokwm.desktop',
