refactor: rename files

--- a/src/meson.build
+++ b/src/meson.build
@@ -29,7 +29,7 @@ srcs = files(
     'layer_shell.c',
     'layout.c',
     'main.c',
-    'monitor.c',
+    'output.c',
     'options.c',
     'output.c',
     'popup.c',
@@ -59,7 +59,7 @@ srcs = files(
     'lib/lib_layout.c',
     'lib/lib_list.c',
     'lib/lib_list2D.c',
-    'lib/lib_monitor.c',
+    'lib/lib_output.c',
     'lib/lib_options.c',
     'lib/lib_output_transform.c',
     'lib/lib_server.c',
