--- a/config/meson.build
+++ b/config/meson.build
@@ -10,3 +10,4 @@ datadir = get_option('datadir') / 'japokwm'
 install_data(runtimeFiles, install_dir: datadir)
 install_data(configFiles, install_dir: '/etc/japokwm')
 install_subdir('layouts', install_dir: datadir)
+install_subdir('layouts', install_dir: '/etc/japokwm')
