test: add unit test file for ipc-json

--- a/test/meson.build
+++ b/test/meson.build
@@ -15,7 +15,8 @@ test_files = files(
     'scratchpad_test.c',
     'bitset_test.c',
     'keybinding_test.c',
-    'layout_test.c'
+    'layout_test.c',
+    'ipc-json_test.c',
     )
 
 foreach test_file: test_files
