feat: add mpfr support for arbitrary precise numbers

--- a/meson.build
+++ b/meson.build
@@ -170,6 +170,7 @@ deps = [\
     dependency('threads'),
     dependency('libinput'),
     dependency('libuv'),
+    dependency('mpfr'),
     ]
 
 # meson.add_install_script('install.sh')
