refactor: simplify ipc-server.c

--- a/src/meson.build
+++ b/src/meson.build
@@ -84,6 +84,7 @@ srcs = files(
     'utils/parseConfigUtils.c',
     'utils/stringUtils.c',
     'utils/writeFile.c',
+    'ipc/ipc_server_sway_adapter.c',
   )
 
 libName = 'japokwm_lib'
